<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/representativeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:contentDescription="@string/representative_profile_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            profileImage="@{representative.official.photoUrl}"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/representativeOffice"
            style="@style/item_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/representativeImageView"
            app:layout_constraintTop_toTopOf="@+id/representativeImageView"
            tools:text="@string/representative_office_title" />

        <TextView
            android:id="@+id/representativeName"
            style="@style/item_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@+id/webIcon"
            app:layout_constraintStart_toStartOf="@+id/representativeOffice"
            app:layout_constraintTop_toBottomOf="@+id/representativeOffice"
            tools:text="@string/representative_name" />

        <TextView
            android:id="@+id/representativeParty"
            style="@style/item_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@{representative.official.party}"
            tools:text="@string/representative_party"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/representativeName"
            app:layout_constraintStart_toStartOf="@+id/representativeName"
            app:layout_constraintTop_toBottomOf="@+id/representativeName" />

        <ImageView
            android:id="@+id/webIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:contentDescription="@string/web_Icon"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
            app:layout_constraintTop_toTopOf="@+id/facebookIcon"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:contentDescription="@string/facebook_icon"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
            app:layout_constraintTop_toTopOf="@+id/twitterIcon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="@dimen/small_margin"
            android:contentDescription="@string/tweeter_icon"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/representativeOffice"
            app:layout_constraintTop_toBottomOf="@+id/representativeOffice"
            app:srcCompat="@drawable/ic_twitter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>