<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- COMPLETE: Add data binding node -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- COMPLETE: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/representatives_motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_representative_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- COMPLETE: Add visual styling and content -->
            <TextView
                android:id="@+id/search_title"
                style="@style/recycler_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/representative_search"
                android:text="@string/representative_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- COMPLETE: Add data binding value -->
            <!-- COMPLETE: Add visual styling and content -->
            <EditText
                android:id="@+id/address_line_1_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/address_line_1"
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.line1}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <!-- COMPLETE: Add data binding value -->
            <!-- COMPLETE: Add visual styling and content -->
            <EditText
                android:id="@+id/address_line_2_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/address_line_2"
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.line2}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1_edit" />

            <!-- COMPLETE: Add data binding value -->
            <!-- COMPLETE: Add visual styling and content -->
            <EditText
                android:id="@+id/city_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/city"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/state_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2_edit" />

            <!-- COMPLETE: Add default values from provided resources  -->
            <!-- COMPLETE: Add data binding value -->
            <!-- COMPLETE: Add visual styling and content -->
            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textPostalAddress"
                android:entries="@array/states"
                stateValue="@{viewModel.address.state}"
                app:layout_constraintBottom_toBottomOf="@id/city_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city_edit"
                app:layout_constraintTop_toTopOf="@id/city_edit" />

            <!-- COMPLETE: Add data binding value -->
            <!-- COMPLETE: Add visual styling and content -->
            <EditText
                android:id="@+id/zip_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/zip"
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="5"
                android:text="@{viewModel.address.zip}"
                app:layout_constraintEnd_toEndOf="@id/city_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city_edit" />

            <!-- COMPLETE: Add visual styling and label -->
            <Button
                android:id="@+id/button_search"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:contentDescription="@string/find_my_representatives"
                android:text="@string/find_my_representatives"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zip_edit" />

            <!-- COMPLETE: Add visual styling and content -->
            <Button
                android:id="@+id/button_location"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/use_my_location"
                android:text="@string/use_my_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_representative_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/constraint_representative_search">

            <!-- COMPLETE: Add visual styling and content -->
            <TextView
                android:id="@+id/representative_title"
                style="@style/recycler_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/my_representatives"

                android:text="@string/my_representatives"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!-- COMPLETE: Add Representatives RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/representativeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/representative_title"
                app:layout_constraintVertical_bias="0.0"
                motion:listitem="@layout/representative_item" />

            <!--            <TextView-->
            <!--                android:id="@+id/list_placeholder"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:gravity="center"-->
            <!--                android:textAlignment="center"-->
            <!--                android:visibility="gone"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/representative_title"-->
            <!--                motion:visibilityMode="ignore" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>